Attempt to fix overflow issues

--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@ body {
 }
 
 #wrapper {
+  position: absolute;
   overflow-x: hidden;
 }
 
